# aiagent

./: CMakeLists.txt  Dockerfile  Doxyfile  README.md  README.txt
cmake/: cef_macros.cmake  cef_variables.cmake
include/: cef_pack_resources.h  cef_pack_strings.h  cef_version.h
libcef_dll/: CMakeLists.txt
llacpp/: CMakeLists.txt  Makefile
llacpp/scripts/: build-info.cmake
project/aiagent/: ApiServer.cpp  ApiServer.hpp  BrowserClient.cpp  BrowserClient.hpp  BrowserTask.hpp  BrowserView.cpp  BrowserView.hpp  CEFGLWindow.cpp  CEFGLWindow.hpp  CMakeLists.txt  DisplayHandler.cpp  DisplayHandler.hpp  GLWindow.cpp  GLWindow.hpp  JSV8Handler.cpp  JSV8Handler.hpp  LifeSpanHandler.cpp  LifeSpanHandler.hpp  LoadHandler.cpp  LoadHandler.hpp  RenderHandler.cpp  RenderHandler.hpp  WebStream.cpp  WebStream.hpp  common.cpp  common.h  faissdb.cpp  faissdb.hpp  gpt.cpp  gpt.hpp  grammar-parser.cpp  log.h  main.cpp  openai.cpp  openai.hpp  sampling.cpp  util.cpp  util.h
